--- a/frontend/src/containers/UserEventTabFolder/UserEventList.css
+++ b/frontend/src/containers/UserEventTabFolder/UserEventList.css
@@ -6,7 +6,7 @@
 }
 
 .eventListTabContainer .eventListContainer{
-  /* background-color: red; */
+  background-color: red;
   /* overflow: auto; */
   width: 60%;
   position: relative;
@@ -15,100 +15,184 @@
 
   /* height: 1000px; */
 }
+@media screen and (max-width: 1000px){
+  .eventListTabContainer .eventListContainer{
+    width: 100%;
+  }
+}
 
 .eventListTabContainer .eventListContainer .eventContainer{
   position: relative;
   background-color: white;
   height: 170px;
-  margin: 12px;
   border-radius: 10px;
   box-shadow: 0 7px 6px rgba(0, 0, 0, 0.12), 0 1px 4px rgba(0, 0, 0, 0.24);
+  display: flex;
+  flex-direction: row;
   overflow: hidden;
 }
 .eventListTabContainer .eventListContainer .eventContainer.active{
   /* opacity: 0.5; */
 }
 
+.eventContainer .eventContainerFirst{
+  width: 18%;
+}
+.eventContainer .eventContainerSecond{
+  width: 62%;
+}
+.eventContainer .eventContainerThird{
+  background-color: green;
+  width: 20%;
+}
 
-.eventListTabContainer .eventListContainer .eventContainer .noPicBox{
+
+
+.eventContainer .eventContainerFirst .noPicBox{
   /* background-color: red; */
-  position: absolute;
-  width: 170px;
+  position: relative;
+  width: 100%;
   height: 100%;
   border: 10px dashed gainsboro;
   font-size: 40px;
   color: grey;
-  padding-top: 10px;
 }
-.eventListTabContainer .eventListContainer .eventContainer .picBox{
-  position: absolute;
-  width: 170px;
+.eventContainer .eventContainerFirst .noPicBox .inContainer{
+  text-align: center;
+  width: 100%;
+  top: 50%;
+  position: relative;
+  transform: translateY(-50%);
+}
+.eventContainer .eventContainerFirst .noPicBox .inContainer .noPicWords{
+  font-size: 20px;
+  margin: 0;
+}
+.eventContainer .eventContainerFirst .picBox{
+  position: relative;
+  width: 100%;
   height: 100%;
   /* border: 10px dashed gainsboro; */
   font-size: 40px;
   color: grey;
   overflow: hidden;
 }
-.eventListTabContainer .eventListContainer .eventContainer .picBox .picBoxPic{
+.eventContainer .eventContainerFirst .picBox .picBoxPic{
   height: 100%;
   width: 100%;
   object-fit: cover;
 }
 
 
-.eventListTabContainer .eventListContainer .eventContainer .noPicBox .noPicWords{
-  font-size: 20px;
-  margin: 0;
-}
 
-.eventListTabContainer .eventListContainer .eventContainer .eventBoxTitle{
-   /* color: red; */
-   position: absolute;
-   font-size:40px;
-   left: 19%;
-   top: 5%;
-}
-.eventListTabContainer .eventListContainer .eventContainer .eventBoxTitle .endTag{
+/* title and info here */
+.eventContainerSecond .secondContainerFirst{
   position: relative;
+  padding-left: 10px;
+  height: 40%;
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+}
+
+.eventContainerSecond .secondContainerSecond{
+  position: relative;
+  padding-left: 10px;
+  height: 20%;
+  display: flex;
+  flex-direction: row;
+}
+
+.eventContainerSecond .secondContainerThird{
+  position: relative;
+  background-color: green;
+  height: 20%;
+  display: flex;
+  flex-direction: row;
+}
+
+.eventContainerSecond .secondContainerFourth{
+  background-color: orange;
+  height: 20%;
+}
+
+.eventContainerSecond .secondContainerFirst .eventBoxTitle{
+   /* color: red; */
+   position: relative;
+   font-size:40px;
+
+}
+
+.eventContainerSecond .secondContainerFirst .tabSect{
+  height: 100%;
+  width: 10%;
+}
+ .eventContainerSecond .secondContainerFirst .tabSect .endTag{
+  position: relative;
+  color:red;
   background-color: #F5F5F5;
-  color: red;
-  border-radius: 10px;
-  height: 20px;
-  font-size: 18px;
-  /* top:10%;
-  left: 95%; */
-  bottom: 7px;
-  margin-left: 10px;
-  padding-left: 3px;
-  padding-right: 3px;
+  width: 80%;
+  height: 30%;
+  border-radius: 5px;
+  text-align: center;
+  top: 50%;
+  left: 50%;
+  transform: translateX(-50%) translateY(-50%);
+
+
 }
 
-.eventListTabContainer .eventListContainer .eventContainer .eventBoxContent{
-  color: red;
-  position: absolute;
-  display: none;
+.eventContainerSecond .secondContainerSecond .locationHolder{
+  display: flex;
+  flex-direction: row;
+  height: 100%;
 }
 
-.eventListTabContainer .eventListContainer .eventContainer .eventBoxLocation{
+
+.eventContainerSecond .secondContainerSecond .locationHolder .locationPin{
   /* color: red; */
-  position: absolute;
-  color: gray;
-  left: 19%;
-  top: 40%;
-  font-size: 20px;
-  /* display: none; */
-}
-
-.eventListTabContainer .eventListContainer .eventContainer .eventBoxDay{
-  /* color: red; */
-  position: absolute;
-  left: 19%;
-  top: 57%;
+  position: relative;
   color: gray;
   font-size: 20px;
-  /* display: none; */
+  top: 50%;
+  transform: translateY(-50%);
+
 }
-.eventListTabContainer .eventListContainer .eventContainer .eventBoxTimes{
+.eventContainerSecond .secondContainerSecond .locationHolder .eventLocation{
+  position: relative;
+  color: gray;
+  font-size: 15px;
+  top: 50%;
+  height: 70%;
+  transform: translateY(-50%);
+  margin-left: 5px;
+}
+
+.eventContainerSecond .secondContainerThird .firstHalf{
+  background-color: red;
+  position: relative;
+  width: 50%;
+
+}
+
+.eventContainerSecond .secondContainerThird .secondHalf{
+  background-color: blue;
+  position: relative;
+  width: 50%;
+}
+
+
+
+.eventContainerSecond .secondContainerThird .firstHalf .eventBoxDay{
+
+  /* color: red; */
+  position: relative;
+  color: gray;
+  font-size: 20px;
+  display: flex;
+  flex-direction: row;
+}
+.eventContainer .eventBoxTimes{
   /* color: red; */
   position: absolute;
   left: 19%;
@@ -119,7 +203,7 @@
 }
 
 
-.eventListTabContainer .eventListContainer .eventContainer .eventBoxHost{
+.eventContainer .eventBoxHost{
   /* color: red; */
   position: absolute;
   /* display: none; */
@@ -129,7 +213,7 @@
   color: gray;
 }
 
-.eventListTabContainer .eventListContainer .eventContainer .eventBoxParticipant{
+.eventContainer .eventBoxParticipant{
   /* background-color: red; */
   font-size: 18px;
   position: absolute;
@@ -148,13 +232,17 @@
   top: 22%; */
 
 }
-.eventListTabContainer .eventListContainer .eventContainer .eventBoxParticipant .likeList{
+.eventContainer .eventBoxParticipant .likeList{
   /* background-color: red; */
   position: absolute;
   left: 82%;
 }
 
-.eventListTabContainer .eventListContainer .eventContainer .joinButton{
+
+
+/* For the buttons */
+
+.eventContainer .joinButton{
   cursor: pointer;
   height: 35%;
   width: 15%;
@@ -168,12 +256,12 @@
   /* padding-top: 30%; */
 }
 
-.eventListTabContainer .eventListContainer .eventContainer .joinButton .joinText{
+.eventContainer .joinButton .joinText{
   position: relative;
   top: 15%;
 }
 
-.eventListTabContainer .eventListContainer .eventContainer .viewButton{
+.eventContainer .viewButton{
   height: 35%;
   width: 15%;
   position: absolute;
@@ -189,12 +277,12 @@
 }
 
 
-.eventListTabContainer .eventListContainer .eventContainer .viewButton .viewText{
+.eventContainer .viewButton .viewText{
   position: relative;
   top: 15%;
 }
 
-.eventListTabContainer .eventListContainer .eventContainer.active .viewButtonPass{
+.eventContainer.active .viewButtonPass{
   height: 35%;
   width: 15%;
   position: absolute;
@@ -207,13 +295,12 @@
   cursor: pointer;
   opacity: 1;
 }
-.eventListTabContainer .eventListContainer .eventContainer .viewButtonPass .viewText{
+.eventContainer .viewButtonPass .viewText{
   position: relative;
   top: 15%;
 }
 
-
-.eventListTabContainer .eventListContainer .eventContainer .hostButton{
+.eventContainer .hostButton{
   height: 35%;
   width: 15%;
   position: absolute;
@@ -226,12 +313,12 @@
   cursor: pointer;
 
 }
-.eventListTabContainer .eventListContainer .eventContainer .hostButton .hostText{
+.eventContainer .hostButton .hostText{
   position: relative;
   top: 15%;
 }
 
-.eventListTabContainer .eventListContainer .eventContainer .leaveButton{
+.eventContainer .leaveButton{
   height: 35%;
   width: 15%;
   position: absolute;
@@ -244,8 +331,7 @@
   cursor: pointer;
 
 }
-
-.eventListTabContainer .eventListContainer .eventContainer .leaveButton .leaveText{
+.eventContainer .leaveButton .leaveText{
   position: relative;
   top: 15%;
 }
