--- a/frontend/src/containers/UserPostTabFolder/UserPostList.css
+++ b/frontend/src/containers/UserPostTabFolder/UserPostList.css
@@ -7,7 +7,7 @@
 
 .postListTabContainer .postListContainer{
   /* background-color: red; */
-  width: 86%;
+  width: 100%;
   position: relative;
   left: 50%;
   transform: translateX(-50%);
@@ -27,10 +27,10 @@
   position: relative;
   flex-grow: 1;
   /* flex-basis: 0; */
-  height: 400px;
+  height: calc(96vw/4);
   /* padding-top: 100%; */
   overflow: hidden;
-  width: 100%;
+  width: calc(96vw/4);
   align-items: center;
 
 }
